// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.liu.proto";
option java_outer_classname = "MitsubishiFx5uProto";
option objc_class_prefix = "PLCP";

package plc;

// The greeting service definition.

service PlcCommu {
  rpc setConnect (PlcConnectRequest) returns (PlcGeneralReply) {}
  rpc readOne (PlcReadOneRequest) returns (PlcReadOneReply) {}
  rpc readMany (PlcReadManyRequest) returns (PlcReadManyReply) {}
  rpc writeOne (PlcWriteOneRequest) returns (PlcGeneralReply) {}
  rpc writeMany (PlcWriteManyRequest) returns (PlcGeneralReply) {}
}

message PlcConnectRequest {
  string ip = 1;
  int32 port = 2;
  int32 slaveId = 3;
  bool isKeepingAlive = 4;
  bool openAutoIncrementTransactionId = 5;
  string range = 6;
}

message PlcReadOneRequest {
  string destination = 1;
}

message PlcReadOneReply {
  sint32 value = 1;
}

message PlcReadManyRequest {
  string startDestination = 1;
  int32 destinationNumbers = 2;
}

message PlcReadManyReply {
  string valuesJsonArray = 1;
}

message PlcWriteOneRequest {
  string destination = 1;
  int32 value = 2;
}

message PlcWriteManyRequest {
  string startDestination = 1;
  int32 destinationNumbers = 2;
  string valuesJsonArray = 3;
}

message PlcGeneralReply {
  bool result = 1;
}